src/App.css
.App {
  text-align: center;
  font-family: 'Lato', sans-serif;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}
/*
.App-header {
  background-color: #222;
  height: 150px;
  padding: 20px;
  color: purple;
  position: fixed;
  top: 0;
} */

.App-title {
  font-size: 1.5em;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.project-list {
  display: flex;
  /* flex-flow: row wrap; */
  flex-direction: column;
  justify-content: space-between;
  padding-bottom: 45px;
}

.project-title {
  font-size: 24px;
  color: #595959;
  letter-spacing: 0.1em;
  text-transform: uppercase;
}

.project-image {
  width: 40vw;
  /* height: 30vh; */
}

.nav-bar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: white;
  padding-left: 2%;
  padding-right: 2%;
}

.nav-item {
  font-size: 9pt;
  color: #595959;
  /* margin: 0 1em 0 0.1em; */
  letter-spacing: 0.1em;
  padding: 0 1em 0 1em;
}

.nav-item:hover {
  color: #00cec9;
}

h1:hover {
  color: #00cec9;
}

.nav-left {
  width: 33vw;
  justify-self: left;
  text-align: left;
  margin-right: 0;
  /* margin-left: 40px; */
}

.nav-right {
  width: 33vw;
  display: flex;
  justify-content: flex-end;

  /* padding: 0 5px 0 5px; */
}

/* .flex {
  display: flex;
  justify-content: space-around;
} */

footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 45px;
  background-color: white;
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
}

#resume {
  /* height: 100vh;
  width: 75vw; */
  background-color: white;
  /* padding-bottom: 10px; */

  /* margin-left: auto;
  margin-right: auto; */
}

.iframe-container {
  border: none;
  /* overflow: hidden; */
  align-content: middle;
  position: relative;
  padding-top: 100%;
  /* padding-bottom: 150px; */
}

.iframe-container iframe {
  border: 0;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

.project-images {
  display: flex;
  justify-content: space-evenly;
}

a {
  text-decoration: none;
}

.single-project {
  padding: 50px;
  color: #595959;
  text-align: center;
  /* margin-bottom: 50px; */
}

.project-description {
  color: #595959;
}

.project-technologies {
  color: #595959;
  font-size: 10pt;
}

.contact {
  display: flex;
  justify-content: left;
  margin-left: 50px;
}

.contact-link {
  padding-right: 20px;
  color: #595959;
  font-size: 9pt;
  letter-spacing: 0.1em;
}

.contact-link:hover {
  color: #00cec9;
}

.all-about-text {
  /* display: flex;
  flex-direction: column;
  text-align: left;
  margin-right: 10px; */
  padding-top: 0;
}

/* #about-contact {
  position: relative;
  left: 100px;
  top: 5px;
  text-align: center;
  /* text-align: left;
} */
.about-text {
  font-size: 1em;
  width: 60vw;
  margin-left: 50px;
  margin-top: 100px;
  text-align: left;
  line-height: 1.5em;
}
/*
.about-text .about-contact {
  justify-content: flex-start;
} */

.about {
  display: flex;
  flex-direction: row;
}

.headshot-container {
  margin-left: 80px;
  margin-top: 120px;
}

.headshot {
  height: 200px;
}

.technology-list {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.technology {
  margin: 8px 5px 0 5px;
  padding: 5px;
  border: 1px #22a6b3 solid;
  border-radius: 5px;
  font-size: 0.7em;
  color: #22a6b3;
  font-weight: bold;
  /* background-color: #22a6b3; */
}

.colored {
  background-color: white;
}

#logo {
  font-family: 'Cinzel Decorative', cursive;
  font-size: 1.18em;
  color: #595959;
}

.line {
  line-height: 1.2;
}

#nav-logo {
  display: flex;
  width: 30vw;
  justify-content: center;
  align-items: center;
  /* text-align: center; */
}

#nav-logo:before,
#nav-logo:after {
  content: '';
  border-top: 0.1em solid #595959;
  margin: 0 1.2em 0 0;
  flex: 1 0 1.2em;
}
#nav-logo:after {
  margin: 0 0 0 1.2em;
}

/*
hr {
  width: 300px;
  margin-left: auto;
  margin-right: auto;
  height: 100px;
  background-color: #666;
} */

/* .fancy {
  line-height: 0.5;
  text-align: center;
}
.fancy span {
  display: inline-block;
  position: relative;
}
.fancy span:before,
.fancy span:after {
  content: '';
  position: absolute;
  height: 5px;
  border-bottom: 1px solid black;
  border-top: 1px solid black;
  top: 0;
  width: 600px;
}
.fancy span:before {
  right: 100%;
  margin-right: 15px;
}
.fancy span:after {
  left: 100%;
  margin-left: 15px;
} */

.fancy :before,
.fancy :after {
  content: '';
  border-top: 0.1em solid black;
  margin: 0 20px 0 0;
  flex: 1 0 20px;
}
.fancy:after {
  margin: 0 0 0 20px;
}

h2 {
  font-family: 'Playfair Display', serif;
  font-size: 2.5em;
}

.copyright {
  font-family: 'Lato', sans serif;
  font-size: 9pt;
  letter-spacing: 0.1em;
  margin-right: 25px;
  color: #595959;
  /* margin-top: 10px; */
}

.container {
  /* background-color: #f2f5f9; */

  position: relative;
  min-height: 100%;
  /* min-height: 100vh; */
  /* padding-bottom: 15px; */
}

/* a {
  height: 20px;
} */

/* hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
} */

@media only screen and (max-width: 870px) {
  body {
    /* background-color: palegreen; */
  }
  .about {
    flex-direction: column;
    padding-bottom: 100px;
    margin-left: 10vw;
    /* align-items: center; */
  }
  .about-text {
    margin-top: 20px;
  }
  /* .all-about-text {
    align-items: center;
    padding-top: 0;
  } */

  .headshot-container {
    margin-left: 50px;
    margin-top: 50px;
  }
  /* iframe {
    height: 500;
    width: 500;
  } */
}

@media only screen and (max-width: 550px) {
  body {
    /* background-color: lightblue; */
  }
  #logo {
    font-size: 0.8em;
  }
  .nav-item,
  .contact-link {
    font-size: 7pt;
  }

  #nav-logo {
    width: 20vw;
  }
  #nav-logo:before,
  #nav-logo:after {
    content: '';
    border-top: 0.1em solid #595959;
    margin: 0 0.35em 0 0;
    flex: 1 0 1.2em;
  }
  #nav-logo:after {
    margin: 0 0 0 0.35em;
  }
  .headshot {
    height: 180px;
  }

  .about-text {
    font-size: 0.9em;
    margin-top: 50px;
  }
  h2 {
    font-size: 2.4em;
  }
}

